failed tests refactor to accommodate the change in cargo lock package transformer