@@ -1,6 +1,7 @@
 package com.blackduck.integration.detectable.detectables.maven.unit;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -28,24 +29,24 @@ public class MavenComplexOutputTest {
     }
     
     private List<String> getInputHeader() {
-        return new ArrayList<>(List.of(
-            "[INFO] Reactor Build Order:",
-            "[INFO] ",
-            "[INFO] generic-parent                                                     [pom]",
-            "[INFO] MX Minimal Viable Runtime :: Parent POM                            [pom]",
-            "[INFO] generic.boot:boot-client:jar:v3.1.42                               [jar]",
-            "[INFO] MX FileServer :: Parent POM                                        [pom]",
-            "[INFO] generic.fileserver:fileserver-client:jar:v3.1.42                   [jar]",
-            "[INFO] REST Service Framework :: Parent                                   [pom]",
-            "[INFO] REST Service Framework :: Logging                                  [jar]",
-            "[INFO] common-parent                                                      [pom]",
-            "[INFO] -------------------< generic.integration:integration >------------------",
-            "[INFO] Building generic.integration:integration:pom:v3.1.42 v3.1.42   [70/2593]",
-            "[INFO] --------------------------------[ pom ]---------------------------------",
-            "[WARNING] The POM for org.eclipse.m2e:lifecycle-mapping:jar:1.0.0 is missing, no dependency information available",
-            "[WARNING] Failed to retrieve plugin descriptor for org.eclipse.m2e:lifecycle-mapping:1.0.0: Plugin org.eclipse.m2e:lifecycle-mapping:1.0.0 or one of its dependencies could not be resolved: Failure to find org.eclipse.m2e:lifecycle-mapping:jar:1.0.0 in http://nexus-dev/nexus/content/groups/mx-artifacts/ was cached in the local repository, resolution will not be reattempted until the update interval of mx-artifacts-plugin has elapsed or updates are forced",
-            "[INFO]",
-            "7275 [main] [INFO] --- maven-dependency-plugin:2.10:tree (default-cli) @ hub-teamcity-common ---"
+        return new ArrayList<>(Arrays.asList(
+                "[INFO] Reactor Build Order:",
+                "[INFO] ",
+                "[INFO] generic-parent                                                     [pom]",
+                "[INFO] MX Minimal Viable Runtime :: Parent POM                            [pom]",
+                "[INFO] generic.boot:boot-client:jar:v3.1.42                               [jar]",
+                "[INFO] MX FileServer :: Parent POM                                        [pom]",
+                "[INFO] generic.fileserver:fileserver-client:jar:v3.1.42                   [jar]",
+                "[INFO] REST Service Framework :: Parent                                   [pom]",
+                "[INFO] REST Service Framework :: Logging                                  [jar]",
+                "[INFO] common-parent                                                      [pom]",
+                "[INFO] -------------------< generic.integration:integration >------------------",
+                "[INFO] Building generic.integration:integration:pom:v3.1.42 v3.1.42   [70/2593]",
+                "[INFO] --------------------------------[ pom ]---------------------------------",
+                "[WARNING] The POM for org.eclipse.m2e:lifecycle-mapping:jar:1.0.0 is missing, no dependency information available",
+                "[WARNING] Failed to retrieve plugin descriptor for org.eclipse.m2e:lifecycle-mapping:1.0.0: Plugin org.eclipse.m2e:lifecycle-mapping:1.0.0 or one of its dependencies could not be resolved: Failure to find org.eclipse.m2e:lifecycle-mapping:jar:1.0.0 in http://nexus-dev/nexus/content/groups/mx-artifacts/ was cached in the local repository, resolution will not be reattempted until the update interval of mx-artifacts-plugin has elapsed or updates are forced",
+                "[INFO]",
+                "7275 [main] [INFO] --- maven-dependency-plugin:2.10:tree (default-cli) @ hub-teamcity-common ---"
         ));
     }
 
@@ -62,7 +63,7 @@ public class MavenComplexOutputTest {
         List<String> input = getInputHeader();
         switch(testCase) {
             case IDETECT3228CASE1:
-                input.addAll(List.of(
+                input.addAll(Arrays.asList(
                     "7450 [main] [INFO] com.blackducksoftware.integration:hub-teamcity-common:jar:3.2.0-SNAPSHOT:compile",
                     "7509 [main] [INFO] +- com.blackducksoftware.integration:hub-common:jar:13.1.2:compile",
                     "7560 [main] [INFO] |  +- com.blackducksoftware.integration:hub-common-rest:jar:2.1.3:compile",
@@ -70,7 +71,7 @@ public class MavenComplexOutputTest {
                 ));
                 break;
             case IDETECT3228CASE2:
-                input.addAll(List.of(
+                input.addAll(Arrays.asList(
                     "7450 [main] [INFO] com.blackducksoftware.integration:hub-teamcity-common:jar:3.2.0-SNAPSHOT |com.blackducksoftware.integration:hub-teamcity-common|",
                     "7509 [main] [INFO] +- com.blackducksoftware.integration:hub-common:jar:13.1.2:compile |com.blackducksoftware.integration:hub-teamcity-common|",
                     "7560 [main] [INFO] |  +- com.blackducksoftware.integration:hub-common-rest:jar:2.1.3:compile |com.blackducksoftware.integration:hub-teamcity-common|",
@@ -78,7 +79,7 @@ public class MavenComplexOutputTest {
                 ));
                 break;
             default:
-                input.addAll(List.of(
+                input.addAll(Arrays.asList(
                     "7450 [main] [INFO] com.blackducksoftware.integration:hub-teamcity-common:jar:3.2.0-SNAPSHOT",
                     "7509 [main] [INFO] +- com.blackducksoftware.integration:hub-common:jar:13.1.2:compile",
                     "7560 [main] [INFO] |  +- com.blackducksoftware.integration:hub-common-rest:jar:2.1.3:compile",
